tests/ui/consts/no-ice-from-static-in-const-issue-52060.stderr
error[E0080]: constant accesses mutable global memory
  --> $DIR/no-ice-from-static-in-const-issue-52060.rs:5:35
   |
LL | static B: [u32; 1] = [0; unsafe { A.len() }];
   |                                   ^ evaluation of `B::{constant#1}` failed here

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0080`.
